--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,17 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 python-telegram-bot = "^13.1"
-python-dotenv = "^0.15.0"
 SQLAlchemy = "^1.3.20"
 APScheduler = "^3.6.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
+python-dotenv = "^0.15.0"
 mypy = "^0.790"
 pylint = "^2.6.0"
 sqlalchemy-stubs = "^0.3"
+names = "^0.3.0"
+pytest = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
